fix a couple of things on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,6 +80,13 @@ main {
     margin-top: 5rem;
 }
 
+@media screen and (max-width: 960px) {
+    .pane {
+        padding: 2.5rem 1rem;
+    }
+    
+}
+
 .pane.dark {
     background-color: rgb(16, 21, 39);
 }
@@ -108,4 +115,5 @@ a:active {
 .center {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
